# gobang

./: .clang-format  .gitignore  CMakeLists.txt  Gobang_Qt.sln  README.md  main.cpp  xmake.lua  五子棋_Qt.sln
Gobang/: Config.cpp  Config.h  Director.cpp  Director.h  GameScene.cpp  GameScene.h  Gobang.vcxproj  Gobang.vcxproj.filters  Scene.cpp  Scene.h  SettingScene.cpp  SettingScene.h  StartScene.cpp  StartScene.h  ThemeChooseScene.cpp  ThemeChooseScene.h  Window.cpp  Window.h  main.cpp  scene.cpp  scene.h  scene.qrc
Gobang/GeneratedFiles/: qrc_Gobang.cpp  qrc_scene.cpp
game/: Window.h
scene/: GameScene.cpp  GameScene.h  Scene.cpp  Scene.h  SettingScene.h
src/: main.cpp
src/game/: Config.cpp  Config.h  Director.cpp  Director.h  Window.cpp  Window.h
src/scene/: GameScene.cpp  GameScene.h  Scene.cpp  Scene.h  SettingScene.cpp  SettingScene.h  StartScene.cpp  StartScene.h  ThemeChooseScene.cpp  ThemeChooseScene.h
